<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessageApp</string>
    <string name="facebook_app_id">662012717251702</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="Ok">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Username">username_hint</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="loginButton_hint">Login</string>
    <string name="sign_up_hint">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_hint">Create new account</string>
    <string name="sign_up_alertText">ERROR!! Please type again all inputs without whitespaces</string>
    <string name="login_alertText">ERROR!! Please type again all inputs without whitespaces</string>
    <string name="login_error_title">Ooops!</string>
    <string name="sign_up_error_title">Ooops!</string>
    <string name="invalide_email_error_title">Ooops!</string>
    <string name="error_invalid_email_message">Please add a valid email address</string>
    <string name="error_not_email_exists_message">Email does not exist.Please try again!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages !!</string>
    <string name="empty_friends_label">Add friends to begin !!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">We are sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">ERROR!!</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="video_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose an existing picture</item>
        <item>Choose an existing video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please selecte a different type</string>
    <string name="error_selecting_file_title">We are sorry!!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message.Please try again</string>
    <string name="title_activity_view_image">MessageApp</string>
    <string name="menu_add_friends_label">add friends</string>
    <string name="autocomplete_search_friends_label">Search friends</string>
    <string name="description_label">Add a description</string>
    <string name="title_activity_friends_messages">FriendsMessagesActivity</string>
    <string name="title_activity_friend_messages">FriendMessagesActivity</string>
    <string name="menu_location_enable">location enable</string>
    <string name="gps_not_found_title">GPS not found</string>
    <string name="gps_not_found_message">Please enable location services</string>
    <string name="title_activity_posts_locations">PostsLocationsActivity</string>
    <string name="title_activity_demo">demoActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="prompt_post">Create a post</string>
    <string name="post">Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="progress_post"><![CDATA[Posting&#8230]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_section3">Search Friends</string>
    <string name="empty_posts">No new posts</string>
    <string name="success_message_create">Posts has been published</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="sign_up_hint_button">Create new account</string>
    <string name="forgot_password_hint"><u>Forgot Password</u></string>
    <string name="title_facebook_login">Facebook Log in</string>
    <string name="return_to_login_hint"><u>Return to log in</u></string>
    <string name="title_activity_resset_password">RessetPasswordActivity</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="add_email_text">Add your email address</string>
    <string name="title_activity_new_password">NewPasswordActivity</string>
    <string name="add_new_password">Add new password</string>
    <string name="update_password_button_label">Update password</string>
    <string name="invalid_password_error_title">Ooops!</string>
    <string name="invalid_password_message_error">Invalid Password.Please rewrite correct the new password</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="network_not_found_title">Network not found</string>
    <string name="network_not_found_context">Want to enable network</string>
    <string name="menu_edit_profile_action">Edit Profile</string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="gender_prompt">Choose your gender</string>
    <string name="age_prompt">Choose your age</string>
    <string name="profile_picture_save_button">Save</string>
    <string-array name="gender_choices">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="age_options">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
    </string-array>

    <string-array name="profile_camera_choices">
        <item>Take Picture</item>
        <item>Choose an existing picture</item>
    </string-array>
    <string name="profile_page_update_success">"Your profile has been updated succesfully!!!"</string>
    <string name="title_activity_find_friends">FindFriendsActivity</string>
    <string name="content_description_user_avatar">User avatar</string>
    <string name="title_activity_chat_box">ChatBoxActivity</string>
    <string name="content_desc_message_icon">Message icon</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>

    <string name="type_msg">Type message</string>
    <string name="title_activity_friend_profile">FriendProfileActivity</string>

</resources>
