<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_logout"
        android:title="@string/menu_logout_label"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_edit_friends"
        android:title="@string/menu_edit_friends_label"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_edit_profil"
        android:title="@string/menu_edit_profile_action"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_add_friends"
        android:title="@string/menu_add_friends_label"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_add_person"/>
    <item android:id="@+id/action_camera"
        android:title="@string/menu_camera_label"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_camera"/>


</menu>
