<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.messageapp.messageapp.LoginActivity"
    android:background="#ff2c2f36">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        android:layout_below="@+id/title"
        android:textColorHint="#b4bab6b4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:textColorHint="#b4bab6b4"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton_hint"
        android:id="@+id/loginButton"
        android:layout_alignTop="@+id/signupButton"
        android:textColor="@android:color/white"
        android:layout_toLeftOf="@+id/forgotPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_hint_button"
        android:id="@+id/signupButton"
        android:layout_below="@+id/passwordField"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/loginButton"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_hint"
        android:id="@+id/forgotPassword"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in with Facebook"
        android:textColor="@android:color/white"
        android:background="#48449A"
        android:id="@+id/facebookbutton"
        android:layout_below="@+id/forgotPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in with Twitter"
        android:id="@+id/twitterButton"
        android:background="#3A9EE5"
        android:textColor="@android:color/white"
        android:layout_below="@+id/facebookbutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>


</RelativeLayout>
