<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.messageapp.messageapp.ProfilePageActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/defaultProfilePicture"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/defaultProfilePicture"
        android:id="@+id/edit_profile_name"
        android:layout_centerHorizontal="true"
        android:hint="Add your profile name"
         />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_gender"
        android:layout_marginTop="10dp"
        android:entries="@array/gender_choices"
        android:prompt="@string/gender_prompt"
        android:layout_below="@+id/edit_profile_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_age"
        android:layout_below="@+id/spinner_gender"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:entries="@array/age_options"
        android:prompt="@string/age_prompt"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/profile_picture_save_button"
        android:id="@+id/profile_button"
        android:layout_below="@+id/spinner_age"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="44dp" />



</RelativeLayout>
